--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "tailwind_course",
   "version": "1.0.0",
-  "description": "Tailwind course by Isiaka Abdulahi",
+  "description": "Tailwind course by Isiaka",
   "main": "index.js",
   "scripts": {
-    "build:css": "tailwind build src/index.css -o dist/index.css --watch"
+    "build:css": "tailwind build src/index.css -o style.css --watch"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "tailwindcss": "^3.0.24"
-  }
+  "license": "ISC"
 }
